# discord-bot

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/commands/: admin.rs  fun.rs  mod.rs  moderation.rs  music.rs
src/structs/: mod.rs  music_queue.rs
src/utils/: send.rs
