[package]
name = "dtc-dbot"
version = "0.1.0"
edition = "2024"

[dependencies]
songbird = { version = "0.5.0", features = ["serenity", "driver"] }
dotenv = "0.15.0"
poise = "0.6.1"
serenity = { version = "0.12.4", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.24"
symphonia = { version = "0.5.5", features = ["all"] }
dashmap = "6.1.0"
